--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 		<div class="mx-3">
-			<h1 class="h1 bg-info">Xliff 1.2 Reader</h1>
+			<h1 class="h1 bg-info">Xliff 1.2 Reader by Sinan Yolal</h1>
 			<div id="firstdiv" class="mx-3">
 				<div>
 					<input type="file" id="choosefiles" multiple accept=".xliff, xlf">
@@ -33,6 +33,7 @@
 					</table>
 				</div>
 			</div>
+            </div>
 		<div>
             <script>
 // adding functions to some buttons after the document is fully loaded.
